@@ -112,7 +112,6 @@ struct profile_hooks {
 histogram_value gimple_histogram_value (struct function *, tree);
 histogram_value gimple_histogram_value_of_type (struct function *, tree, enum hist_type);
 void gimple_add_histogram_value (struct function *, tree, histogram_value);
-void gimple_remove_histogram_value (struct function *, tree, histogram_value);
 void dump_histograms_for_stmt (struct function *, FILE *, tree);
 void gimple_remove_histogram_value (struct function *, tree, histogram_value);
 void gimple_remove_stmt_histograms (struct function *, tree);
