@@ -1,3 +1,8 @@
+2007-08-21  Ian Lance Taylor  <iant@google.com>
+
+	PR tree-optimization/33134
+	* g++.dg/tree-ssa/pr33134.C: New test.
+
 2007-08-21  Nathan Froyd  <froydnj@codesourcery.com>
 
 	* gcc.target/powerpc/spe-vector-memset.c: New testcase.
